style.css
/* ... */
.widget-area .edd-cart-added-alert {
	right: 0;
	bottom: -20px;
}
.edd_download_inner .edd-cart-added-alert {
	position: static;
	display: inline-block;
}
.edd_purchase_tax_rate {
	color: #999;
	font-size: .8em;
	font-style: normal;
	margin-top: 4px;
}
.vendd-price-button-container .edd_purchase_tax_rate,
.vendd-price-button-container .edd_purchase_tax_rate {
	position: static;
	display: block;
}
.widget .edd_purchase_tax_rate {
	position: absolute;
}

/* variable pricing w/ support for descriptions (http://wordpress.org/plugins/edd-variable-pricing-descriptions/) */
.widget-area .edd_price_options ul {
	border: 1px solid #f2f2f2;
	border-radius: 4px;
}
.entry-content .edd_price_options ul {
	border: none;
	padding: 0;
}
.edd_download_purchase_form .edd_price_options {
	color: #757575;
	font-size: 13px;
	margin-bottom: 6px;
}
.edd_download_purchase_form .edd_price_options li {
	margin-bottom: 10px;
}
.widget-area .edd_download_purchase_form .edd_price_options li {
	padding: 8px 15px;
}
.vendd-price-button-container .edd_download_purchase_form .edd_price_options li {
	padding: 0 0 10px;
	border-bottom: 2px solid #f2f2f2;
	margin-bottom: 10px;
}
.vendd-price-button-container .edd_download_purchase_form .edd_price_options li:first-child {
	border-radius: 4px 4px 0 0;
}
.edd_download_purchase_form .edd_price_options li:last-child {
	border-bottom: none;
	border-radius: 0 0 4px 4px;
}
.vendd-price-button-container .edd_download_purchase_form .edd_price_options li:last-child {
	padding-bottom: 0;
	margin-bottom: 0;
}
.vendd-price-button-container .edd_download_purchase_form .edd_price_options.edd_single_mode li:last-child {
	padding-bottom: 5px;
}
.vendd-price-button-container .edd_download_purchase_form .edd_price_options.edd_multi_mode li:last-child {
	padding-bottom: 10px;
	border-bottom: 2px solid #f2f2f2;
	margin-bottom: 10px;
}
.vendd-price-button-container .edd_single_mode + .edd_download_quantity_wrapper {
	padding-top: 20px;
	border-top: 1px solid #f2f2f2;
}
.vendd-price-button-container .edd_multi_mode + .edd_purchase_submit_wrapper {
	padding-top: 10px;
}
.edd_download_purchase_form .edd_price_options li:before {
	content: "";
	margin: 0;
}
.edd_download_purchase_form .edd_price_options li input[type="radio"],
.edd_download_purchase_form .edd_price_options li input[type="checkbox"] {
	margin-right: 6px;
}
.edd_download_purchase_form .edd_price_options li .edd_price_option_name {
	font-weight: 400;
}
.edd-variable-pricing-desc {
	color: #999;
	margin: 4px 0 0;
}

/* purchase form */
.widget_edd_product_details .widget-title {
	font-size: 1.8em;
}
.widget_edd_product_details .download-title {
	display: none;
}
.single-download .widget_edd_product_details .edd_download_purchase_form {
	position: relative;
	margin-bottom: 0;
}
.widget_edd_product_details .edd_download_purchase_form .edd-submit,
.content-area .edd_download_purchase_form .edd-submit {
	font-size: 1rem;
	padding: 10px;
	border: none;
	border-radius: 4px;
	width: 100%;
}
.content-area .edd_download_purchase_form .edd-submit {
	width: auto;
}
.content-area .edd_download_purchase_form {
	margin-bottom: 1.5em;
}
.site-content .edd_download_purchase_form input[type="number"] {
	background: #fff;
	padding: 2px 8px;
	width: 65px;
}
.site-content .edd_download_purchase_form .edd_download_quantity_wrapper:before {
	color: #d8d8d8;
	font-family: "FontAwesome";
	content: "\f00d";
	margin: 0 10px 0 0;
}
.site-content .edd_download_quantity_wrapper .edd_price_option_sep {
	display: none;
}
.site-content .edd_download_purchase_form .edd_multi_mode .edd_download_quantity_wrapper:before {
	margin: 0 10px 0 0;
}
.site-content .edd_download_purchase_form .edd_price_options.edd_multi_mode .edd_download_quantity_wrapper {
	padding-left: 0;
	margin-top: 2px;
}
.widget_edd_product_details .edd-meta {
	font-size: 13px;
	margin: 20px 0 0;
}
.widget_edd_product_details .edd-meta .download-terms {
	display: block;
}

/* cart widget */
.widget_edd_cart_widget .edd_subtotal {
	background: #fafafa;
	font-style: normal;
	margin: 0;
}
.widget_edd_cart_widget .edd_subtotal .subtotal {
	color: #19b219;
}
.widget_edd_cart_widget .edd-cart-item:before,
.widget_edd_cart_widget .edd_subtotal:before,
.widget_edd_cart_widget .edd_checkout:before,
.widget_edd_cart_widget .cart_item.empty:before {
	content: none;
	margin: 0;
}
.edd_cart_item_image img {
	border-radius: 3px;
}
.vendd-empty-cart .widget_edd_cart_widget {
}
.vendd-empty-cart .widget_edd_cart_widget .empty-cart-title {
	font-size: 1.2em;
	margin-bottom: 0;
}
.vendd-empty-cart .widget_edd_cart_widget .cart_item.empty > p,
.vendd-empty-cart .widget_edd_cart_widget .edd_downloads_list {
	display: none;
}

/* Author & Download Details */
.vendd-download-author {
	display: block;
	text-align: center;
	margin-bottom: 10px;
}
.vendd-download-author .avatar {
	border-radius: 50%;
}
.vendd-author-contact {
	padding: 10px 20px 8px;
}
.vendd-contact-method {
	display: inline-block;
	margin-right: 6px;
}
.vendd-social-profile {
	font-size: 1.3em;
	line-height: 1;
}
.vendd-twitter {
	color: #00aced;
}
.vendd-google-plus {
	color: #dd4b39;
}
.vendd-facebook {
	color: #3b5998;
}
.vendd-youtube {
	color: #bb0000;
}
.vendd-author-website {
	float: right;
}
.vendd-website {
	color: #555;
}
.vendd-social-profile:hover {
	color: #555;
}
.vendd-website:hover {
	color: #757575;
}
.widget li.vendd-details-list-item {
	padding: 0;
}
.widget li.vendd-details-list-item:before {
	content: "";
	margin-right: 0;
}
.store-name-heading {
	display: block;
	font-size: 1.5em;
	text-align: center;
}
.vendd-details-list-item .vendd-detail-name,
.vendd-details-list-item .vendd-detail-info {
	display: inline-block;
	width: 48%;
}
.vendd-details-list-item .vendd-detail-name {
	vertical-align: top;
	padding: 10px 0 10px 17px;
}
.vendd-details-list-item .vendd-detail-info {
	text-align: right;
	padding: 10px 20px 10px 0;
}
.vendd-detail-name {
	font-weight: 700;
}
/* ... */

